# Project-RAVEN

./: .gitignore  BHV_NewTrail.cpp  CMakeLists.txt  README.md
ivp/missions/alder/: alder.bhv  alder.moos
ivp/missions/m10_jake/: targ_archie.bhv  targ_archie.moos  targ_betty.bhv  targ_betty.moos  targ_shoreside.moos
ivp/missions/m15_pursuit/: targ_chaser.bhv  targ_chaser.moos  targ_evader.bhv  targ_evader.moos  targ_shoreside.moos
ivp/missions/m17_ravenv2/: alpha.bhv  launch.sh  meta_RAVEN.bhv  meta_gilda.bhv  meta_henry.bhv  meta_raven.bhv  meta_shoreside.moos  meta_shoresideproxy.bhv  meta_vehicle.moos  station.bhv  targ_RAVEN.bhv  targ_RAVEN.moos  targ_alpha.bhv  targ_alpha.moos  targ_gilda.bhv  targ_gilda.moos  targ_henry.bhv  targ_henry.moos  targ_shoreside.moos  targ_station.bhv  targ_station.moos
ivp/missions/m2_berta/: launch_shoreside.sh  targ_abe.bhv  targ_abe.moos  targ_ben.bhv  targ_ben.moos  targ_shoreside.moos
ivp/missions/m3_casar/: targ_abe.bhv  targ_abe.moos  targ_ben.bhv  targ_ben.moos  targ_shoreside.moos  vpositions.txt
ivp/missions/m8_hugo/: launch.sh  meta_betty.bhv  meta_shoreside.moos  targ_archie.bhv  targ_archie.moos  targ_betty.bhv  targ_betty.moos  targ_jackal.bhv  targ_jackal.moos  targ_shoreside.moos
ivp/src/: CMakeLists.txt
ivp/src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
missions/m17_ravenND/: alpha.bhv  launch.sh  meta_raven.bhv  meta_shoreside.moos  meta_vehicle.moos  targ_alpha.bhv  targ_alpha.moos  targ_raven.bhv  targ_raven.moos  targ_shoreside.moos  targ_shoresideproxy.moos
missions/m17_ravenND/LOG_ALPHA_11_4_2025_____00_09_08/: LOG_ALPHA_11_4_2025_____00_09_08.slog
missions/m17_ravenND/LOG_ALPHA_12_3_2025_____19_20_49/: LOG_ALPHA_12_3_2025_____19_20_49.slog
missions/m17_ravenv2/: alpha.bhv  launch.sh  meta_gilda.bhv  meta_henry.bhv  meta_shoreside.moos  meta_vehicle.moos  targ_alpha.bhv  targ_alpha.moos  targ_gilda.bhv  targ_gilda.moos  targ_henry.bhv  targ_henry.moos  targ_shoreside.moos
missions/raven_newtrail/: alpha.bhv  launch.sh  meta_raven.bhv  meta_shoreside.moos  meta_vehicle.moos  plug_uSimpleRobot.moos  targ_alpha.bhv  targ_alpha.moos  targ_raven.bhv  targ_raven.moos  targ_shoreside.moos  targ_shoresideproxy.bhv  targ_shoresideproxy.moos
missions/uas/: all.def
src/: CMakeLists.txt
src/lib_bhvNewTrail/: BHV_NewTrail.cpp  BHV_NewTrail.h  CMakeLists.txt
src/lib_bhvSimpleMidpoint/: BHV_SimpleMidpoint.cpp  BHV_SimpleMidpoint.h  CMakeLists.txt
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
(+278 files in other folders)
